@@ -40,6 +40,11 @@ void Fldigi::readClient() {
     int split = data.indexOf("\r\n\r\n", 0);
     data.remove(0, split+4);
 
+    /* WORKAROUND - FLDIGI has probably an issue. It seems that XML
+     * that is generated by FLDIGI contains Processing Instruction (clientid)
+     * without mandatory space */
+    data.replace("<?clientid=", "<?clientid =");
+
     QXmlStreamReader xml(data);
     processMethodCall(sock, xml);
 
@@ -63,7 +68,6 @@ void Fldigi::processMethodCall(QTcpSocket* sock, QXmlStreamReader& xml) {
 
     while (!xml.atEnd() && !xml.hasError()) {
         xml.readNextStartElement();
-
         if (xml.name() == QString("methodCall"))
         {
             qCDebug(runtime) << "method call";
@@ -71,15 +75,18 @@ void Fldigi::processMethodCall(QTcpSocket* sock, QXmlStreamReader& xml) {
 
         if (xml.name() == QString("methodName"))
         {
+            qCDebug(runtime) << "methodName";
             QString method = xml.readElementText();
 
             if (method == "log.add_record") {
+                qCDebug(runtime) << "log.add_record";
                 QString param = parseParam(xml);
                 if (!param.isEmpty()) {
                     response = addRecord(param);
                 }
             }
             else if (method == "system.listMethods") {
+                qCDebug(runtime) << "system.listMethods";
                 response = listMethods();
             }
         }
