@@ -10,6 +10,7 @@ TBC - 0.22.0
 - Fixed ADIF import (issue #196)
 - Fixed Operator field is incorrectly used  (issue #197)
 - Fixed Crash if an unknown POTA & SOTA/WWFF Setting is entered (issue #198)
+- Fixed FLDIGI cannot connect QLog (issue #199)
 - Fixed if ADIF record is missing band info, add this from freq field (thx DJ5CW)
 
 2023/04/16 - 0.21.0
